# projects

Algorithms/: CMakeLists.txt  compile_commands.json  main.cpp
Algorithms/.cache/clangd/index/: Human.cpp.9B5F68B0E6AEE95F.idx  Human.h.CB9796DB0582B3F2.idx
Algorithms/for_each/: main.cpp  prog
Algorithms/include/: Human.h
Algorithms/reduce/: main.cpp  prog
Algorithms/sort/: prog  zadanie1.cpp  zadanie2.cpp
Algorithms/src/: Human.cpp
CoutTesting/: CMakeLists.txt  main.cpp
GTKBoxExample/: .clangd  app  basic_adw  basic_adw.c  header_bar_example  header_bar_example.c  toast_example  toast_example.c
LiskovPrinciple/: desc.txt
StringOperations/: CMakeLists.txt  TASK.txt  main.cpp  notes.txt
StringOperations/include/: OccuranciesGetter.h  StringOperations.h  VowelGetter.h
StringOperations/src/: OccuranciesGetter.cpp  StringOperations.cpp  VowelGetter.cpp
Utilities/: CMakeLists.txt  compile_commands.json
Utilities/.cache/clangd/index/: CinFeatures.cpp.6D92F7A090086F17.idx  CinFeatures.cpp.8EB82E0090A85979.idx  CinFeatures.cpp.B9D7A26C2C2381F1.idx  CinFeatures.h.1EB0A2518A8CBA27.idx  CinFeatures.h.4361AEDC6CA14FC9.idx  CinFeatures.h.CB4787B7E2AC49EB.idx  LocalDate.cpp.C436185A37C9327E.idx  LocalDate.h.FA9576C07867F310.idx  SafeInput.cpp.588969EED5A59921.idx  SafeInput.h.1509516D8DA16FC5.idx
Utilities/cmake/: UtilitiesConfig.cmake.in
Utilities/include/system/: CinFeatures.h  CoutExtended.h  SafeInput.h
Utilities/include/types/: LocalDate.h
Utilities/src/: CinFeatures.cpp  main.cpp
Utilities/src/system/: CinFeatures.cpp  CoutExtended.cpp  SafeInput.cpp
Utilities/src/types/: LocalDate.cpp
addition/: main.cpp  prog
bind/: main.cpp  prog
brackets_validator/: main.cpp  prog  task.txt
c_array/: main.cpp  prog
casts/: main.cpp  prog
classes_theme/: CMakeLists.txt  main.cpp
classes_theme/.cache/clangd/index/: MyClass.cpp.3F0E229A5806FDB2.idx  MyClass.h.78331970E500DD7A.idx  main.cpp.4929CFD248D7F2BF.idx
classes_theme/include/: MyClass.h
classes_theme/src/: MyClass.cpp
code.mu/: task.txt
code.mu/lesson1.10.3/: CMakeLists.txt  main.cpp  task.txt
code.mu/lesson1.10.3/.cache/clangd/index/: main.cpp.C3CA27FFF2541D3A.idx
code.mu/lesson1.7.3/: CMakeLists.txt  main.cpp  prog  task.txt
code.mu/lesson1.8.4/: CMakeLists.txt  main.cpp  task.txt
code.mu/lesson1.8.4/.cache/clangd/index/: main.cpp.2CE5A9202A0BD963.idx
code.mu/lesson1.9.5/: CMakeLists.txt  compile_commands.json  main.cpp  task.txt
code.mu/lesson1.9.5/.cache/clangd/index/: main.cpp.85A2B47DF7993C6D.idx
code.mu/lesson2.2.3/: CMakeLists.txt  main.cpp  task.txt
copy_move/: main.cpp  prog
cproj/: main.cpp  prog
dec_to_bin/: main.cpp  prog
default_copy_move_constructor/: main.cpp  prog
exceptions/: main.cpp  prog
float/: CMakeLists.txt  main.cpp
float/.cache/clangd/index/: Float.cpp.4D70D1842B363D51.idx  Float.h.5D1D1FC28DEA8EF2.idx  main.cpp.73D016B11DF8EE8C.idx
float/include/: Float.h
float/src/: Float.cpp
for_clause/: main.cpp  prog
forward_declaration/: CMakeLists.txt  main.cpp  prog
forward_declaration/.cache/clangd/index/: A.cpp.BCAC02540B096C55.idx  A.h.DA6849FDEBA61C4A.idx  B.h.0FAD8FEDEE249F5C.idx  main.cpp.F96D1509840B3AE6.idx
forward_declaration/include/: A.h  B.h
forward_declaration/src/: A.cpp
func_pointers_and_bind/: main.cpp  prog
function_pointers/: main.cpp
get_max_rank/: main.cpp  prog
global/: class1.h  class2.h  main.cpp
if_clause/: lesson1.cpp  lesson2.cpp  main.cpp  prog  reduce.cpp
increment_decrement/: main.cpp  prog
inheritance/: main.cpp  notes.txt  prog
inheritance/bank/: CMakeLists.txt  compile_commands.json  main.cpp  main1.cpp
inheritance/bank/.cache/clangd/index/: ConsumerCredit.cpp.6DBCDA4A50729899.idx  ConsumerCredit.hpp.B075273F446B870F.idx  Credit.hpp.7817153BCEB5FED7.idx  Factoring.cpp.FC9F4B64DAFBD45A.idx  main.cpp.5C18A238073EE832.idx
inheritance/bank/abstracts/: Credit.hpp
inheritance/bank/impl/: ConsumerCredit.cpp  ConsumerCredit.hpp  Factoring.cpp  Factoring.hpp
inheritance/homeWork/: CMakeLists.txt  TASK.txt  compile_commands.json  main.cpp
inheritance/homeWork/.cache/clangd/index/: human.cpp.C6984E03B2005E33.idx  human.h.E899EA57493F131E.idx  main.cpp.87D30856490B8C1B.idx  monster.cpp.04B42DC8092DCAEC.idx  monster.cpp.1DD0EF4A5AC735B9.idx  monster.h.C85672E92B70365C.idx
inheritance/homeWork/include/: human.h  monster.h
inheritance/homeWork/src/: human.cpp  monster.cpp
johnny-five/: index.js  package-lock.json  package.json
lambda/: main.cpp  prog
lesson2/: main.cpp  prog
list/: list.cpp  list.h  notes.txt
logics/: bool.txt  main.cpp  prog
operations/: CMakeLists.txt  Config.cmake.in  compile_commands.json
operations/.cache/clangd/index/: IntegerOperations.cpp.6A094C8B1BD3BF5E.idx  IntegerOperations.h.518F167B5D1796B2.idx
operations/include/: CharOperations.h  IntegerOperations.h  StringOperations.h
operations/src/: CharOperations.cpp  IntegerOperations.cpp  StringOperations.cpp
operations/systemd/: operations.service.in
polimorphism/: CMakeLists.txt  addition.cpp  addition.h  main.cpp  notes.txt
qtform/: CMakeLists.txt  compile_commands.json  main.cpp
qtform/.cache/clangd/index/: MainWindow.cpp.81EE77139998813C.idx  MainWindow.h.2D1A2AE24C6143A0.idx  main.cpp.D78E07BA0881D9AD.idx  moc_MainWindow.cpp.DD3F35B16A7E4D06.idx  mocs_compilation.cpp.8AD1E6085D078EB6.idx
qtform/include/: MainWindow.h  OurLabel.h
qtform/src/: MainWindow.cpp  OurLabel.cpp
set/: CMakeLists.txt  main.cpp
set/.cache/clangd/index/: Set.cpp.698FE3C8B1B07A2E.idx  Set.h.008CD81E9C71D9BA.idx  main.cpp.9DF7AA3432F75CE4.idx
set/include/: Set.h
set/src/: Set.cpp
while_clause/: CMakeLists.txt  compile_commands.json  main.cpp  prog
while_clause/.cache/clangd/index/: Zadanie1.cpp.02022F8C86FBD445.idx  Zadanie1.h.C5D2CAFE4B0D561A.idx  Zadanie2.cpp.3D74626B6221D8A5.idx  Zadanie2.h.B7336F210ED9BD57.idx  main.cpp.E42EB31E2DA50780.idx
while_clause/include/: Zadanie1.h  Zadanie2.h
while_clause/src/: Zadanie1.cpp  Zadanie2.cpp
while_clause/tasks/: Zadanie1.txt  Zadanie2.txt
(+268 files in other folders)
